# ASimpleDiscretizationOfTheVectorDirichletEnergy

./: .gitmodules  README.md
MATLAB/: .gitignore  path_handling.m
MATLAB/_functions/: add_lights_o.m  all_edges.m  arrow3D.m  average_per_edge_onto_vertices.m  average_per_face_onto_vertices.m  axisangle_to_rotmatrix.m  bdry_edge_indices.m  cr_plot_vec.m  disk.m  half_torus.m  indexed_per_edge_normals.m  inradius.m  matcap_shade.m  project_onto_complex_pervertex_space.m  project_onto_cr_space.m  pts_closest_to.m  sample_and_snap.m  scatter_plot.m  shader.m  vec_plot.m  vertexwise_plot_vec.m
MATLAB/boundaryconditions/: boundaryconditions.m
MATLAB/convergencetohighestres/: convergencetohighestres.m
MATLAB/curvedexactconvergence/: curvedexactconvergence.m
MATLAB/denoising/: denoising.m
MATLAB/diskconvergence/: diskconvergence.m
MATLAB/killingfields/: .gitignore  killingfields.m
MATLAB/shapeoperator-meancurv/: mean_curvature_highestres.m
MATLAB/shapeoperator-principalcurvs/: principal_curvatures_plot.m  torus.m  torus_convergence.m  torus_inverse.m  torus_normal.m  torus_principal_curvatures.m
MATLAB/smoothvectorfielddesign/: smoothvectorfielddesign.m
MATLAB/spectrum/: spectrum_conv.m
MATLAB/teaser/: teaser_smooth.m  teaser_transport.m
MATLAB/triangleregularity/: triangleregularity.m
MATLAB/vectorheat/: vectorheat.m
cpp/: CMakeLists.txt
cpp/applications/cr/: CMakeLists.txt  cr-edges.cpp  cr-shape-operator.cpp  cr-twisted-vector-laplacian.cpp  cr-vector-laplacian-and-mass.cpp  cr-vector-laplacian.cpp  cr-vector-mass.cpp  cr_edges.m  cr_holomorphic_energies.m  cr_shape_operator.m  cr_twisted_vector_laplacian.m  cr_vector_laplacian.m  cr_vector_laplacian_and_mass.m  cr_vector_mass.m
cpp/include/libigl/: cr_edgemidpoints.cpp  cr_edgemidpoints.h  cr_edges.cpp  cr_edges.h  cr_embedding_derivative.cpp  cr_embedding_derivative.h  cr_shape_operator.cpp  cr_shape_operator.h  cr_twisted_vector_laplacian.cpp  cr_twisted_vector_laplacian.h  cr_vector_laplacian.cpp  cr_vector_laplacian.h  cr_vector_mass.cpp  cr_vector_mass.h  edgewise_normal_from_cr.cpp  edgewise_normal_from_cr.h  orient_halfedges.cpp  orient_halfedges.h
cpp/include/tools/: average_edgewise_vectors.cpp  average_edgewise_vectors.h
